# SAAS-biolerplate

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_PLAN.md  Makefile  PROJECT_GUIDE.md  README.md  RULES.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260330_0001_phase2_saas_integrations.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/dependencies/: current_tenant.py  current_user.py
backend/app/api/v1/endpoints/: auth.py  billing.py  core_feature.py  organizations.py  users.py
backend/app/background/: tasks.py
backend/app/core/: cache.py  config.py  database.py  security.py  security_headers.py  tenant.py
backend/app/crud/: base.py  organization.py  subscription.py  user.py
backend/app/models/: __init__.py  asaas_customer.py  asaas_webhook_event.py  audit_log.py  base.py  email_delivery.py  feature_flag.py  organization.py  subscription.py  user.py
backend/app/schemas/: auth.py  billing.py  organization.py  user.py
backend/app/services/: asaas_service.py  audit_service.py  email_service.py  feature_flag_service.py
backend/app/utils/: pagination.py
backend/tests/: conftest.py  test_auth.py  test_auth_rate_limit.py  test_billing.py  test_organizations.py  test_security_headers.py  test_users.py
docs/: ARCHITECTURE.md  ASAAS_INTEGRATION.md  BREVO_INTEGRATION.md  MULTI_TENANCY.md  OPERATIONS.md
frontend/: .env.example  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
(+30 files in other folders)
